@@ -2,6 +2,7 @@
 - In audisp-remote, add a sigchld handler
 - In auditd, check for duplicate remote connections before accepting
 - Remove trailing ':' if any are at the end of acct fields in ausearch
+- Update remote logging code to do better sanity check of data
 
 1.7.14
 - In auditctl rules allow a0-a3 to be negative numbers
